# DART

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
dart/: __init__.py
dart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dart/app/: README.md  app.py  qwen3_14b_app.sh  qwen3_1d7b_app.sh  qwen3_32b_app.sh  qwen3_4b_app.sh  qwen3_8b_app.sh
dart/model/: __init__.py  base.py  dart_configs.py  dart_model.py  dart_utils.py  kv_cache.py  llama3_dart.py  template.py
dart/tree_search/: tree_search.py  tree_search_config.py
dart/tree_search/cpplib/cpp_ngram/: __init__.py  aca_ngram.cpp  cpp_ngram.py  ngram_binding.cpp  trie_ngram.cpp
dart/tree_search/cpplib/cpp_search/: __init__.py  cpp_search.py  search_binding.cpp  searcher.cpp
dart/tree_search/cpplib/cpp_utils/: buffered_file_reader.cpp
dart/tree_search/cpplib/inc/: defs.h  ngram.h  searcher.h  utils.h
dart/tree_search/ngram_build/: build_llama2.sh  ngram_build.py
