[project]
name = "dart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate==0.26.0",
    "anthropic==0.5.0",
    "datasets>=4.4.1",
    "flask>=3.1.2",
    "fschat==0.2.31",
    "gradio==3.50.2",
    "modelscope>=1.33.0",
    "openai==0.28.0",
    "protobuf==3.19.0",
    "sentencepiece==0.1.99",
    "torch==2.8.0",
    "transformers==4.53.1",
    "triton>=3.2.0",
    "zstandard==0.25.0",
]

[tool.setuptools]
packages = ["dart", "third_party"]
